<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/>
    </parent>

    <modules>
        <module>app</module>
        <module>admin-api</module>
        <module>commons</module>
        <module>messaging</module>
        <module>employees</module>
    </modules>

    <groupId>test.makcon.api</groupId>
    <artifactId>employees-api</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>${project.artifactId} ${project.version}</name>

    <properties>
        <!-- versions -->
        <java.version>21</java.version>
        <kotlin.version>1.9.24</kotlin.version>

        <!-- external dependencies -->
        <kotlin-logging-jvm.version>3.0.5</kotlin-logging-jvm.version>
        <jackson-module-kotlin.version>2.17.1</jackson-module-kotlin.version>
        <kotest.version>5.9.1</kotest.version>
        <valiktor.version>0.12.0</valiktor.version>
        <shedlock.version>5.13.0</shedlock.version>

        <!-- plugins-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <plugins.source.version>3.3.1</plugins.source.version>
        <plugins.surefire.version>3.3.0</plugins.surefire.version>
        <plugins.versions.version>2.16.2</plugins.versions.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- internal dependencies -->
            <dependency>
                <groupId>test.makcon.api</groupId>
                <artifactId>app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>test.makcon.api</groupId>
                <artifactId>admin-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>test.makcon.api</groupId>
                <artifactId>commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>test.makcon.api</groupId>
                <artifactId>messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>test.makcon.api</groupId>
                <artifactId>employees</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- external dependencies -->
            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-spring</artifactId>
                <version>${shedlock.version}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-provider-mongo</artifactId>
                <version>${shedlock.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- external dependencies -->
        <dependency>
            <groupId>org.valiktor</groupId>
            <artifactId>valiktor-core</artifactId>
            <version>${valiktor.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Kotlin-->
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-core</artifactId>
            <version>${kotlin-coroutines.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-coroutines-reactor</artifactId>
            <version>${kotlin-coroutines.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.microutils</groupId>
            <artifactId>kotlin-logging-jvm</artifactId>
            <version>${kotlin-logging-jvm.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
            <version>${jackson-module-kotlin.version}</version>
        </dependency>

        <!-- test dependencies-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.kotest</groupId>
            <artifactId>kotest-assertions-core-jvm</artifactId>
            <version>${kotest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                    </compilerPlugins>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${plugins.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${plugins.surefire.version}</version>
                <configuration>
                    <includes>
                        <include>**/*Should.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                    <argLine>--add-opens java.base/java.time=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${plugins.versions.version}</version>
                <executions>
                    <execution>
                        <id>update-parent</id>
                        <goals>
                            <goal>update-parent</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <allowMajorUpdates>false</allowMajorUpdates>
                        </configuration>
                    </execution>
                    <execution>
                        <id>update-properties</id>
                        <goals>
                            <goal>update-properties</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <allowMajorUpdates>false</allowMajorUpdates>
                            <includeParent>false</includeParent>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
